--- a/charts/ndtech-buildbarn/Chart.yaml
+++ b/charts/ndtech-buildbarn/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: ndtech-buildbarn
-description: Helm chart for ndtech-buildbarn
+description: Helm chart for ndtech-website
 type: application
 version: 0.0.1
