--- a/charts/ndtech-buildbarn/templates/configmap.yaml
+++ b/charts/ndtech-buildbarn/templates/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ndtech-buildbarn
-  namespace: {{ .Values.deployment.namespace }}
+  namespace: {{ .Values.deployment.imageVersion }}
 data:
   name: "ndtech-buildbarn"
