--- a/charts/ndtech-buildbarn/templates/storage/storage-statefulset.yaml
+++ b/charts/ndtech-buildbarn/templates/storage/storage-statefulset.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: storage
-  namespace: buildbarn
+  namespace: {{ .Values.deployment.namespace }}
 spec:
   replicas: 2
   selector:
