--- a/charts/ndtech-buildbarn/templates/config/storage-configmap.yaml
+++ b/charts/ndtech-buildbarn/templates/config/storage-configmap.yaml
@@ -6,22 +6,61 @@ data:
     {
       blobstore: {
         contentAddressableStorage: {
-          local: {
-            directory: '/cas',
-            offsetFileSizeBytes: 16 * 1024 * 1024,
-            offsetCacheSize: 10000,
-            dataFileSizeBytes: 10 * 1024 * 1024 * 1024,
-            dataAllocationChunkSizeBytes: 16 * 1024 * 1024,
+          'local': {
+            keyLocationMapOnBlockDevice: {
+              file: {
+                path: '/storage-cas/key_location_map',
+                sizeBytes: 16 * 1024 * 1024,
+              },
+            },
+            keyLocationMapMaximumGetAttempts: 8,
+            keyLocationMapMaximumPutAttempts: 32,
+            oldBlocks: 8,
+            currentBlocks: 24,
+            newBlocks: 3,
+            blocksOnBlockDevice: {
+              source: {
+                file: {
+                  path: '/storage-cas/blocks',
+                  sizeBytes: 10 * 1024 * 1024 * 1024,
+                },
+              },
+              spareBlocks: 3,
+            },
+            persistent: {
+              stateDirectoryPath: '/storage-cas/persistent_state',
+              minimumEpochInterval: '300s',
+            },
           },
         },
         actionCache: {
-          local: {
-            directory: '/ac',
-            offsetFileSizeBytes: 1024 * 1024,
-            offsetCacheSize: 1000,
-            dataFileSizeBytes: 100 * 1024 * 1024,
-            dataAllocationChunkSizeBytes: 1024 * 1024,
-            instances: ['bb-event-service', 'remote-execution'],
+          completenessChecking: {
+            'local': {
+              keyLocationMapOnBlockDevice: {
+                file: {
+                  path: '/storage-ac/key_location_map',
+                  sizeBytes: 1024 * 1024,
+                },
+              },
+              keyLocationMapMaximumGetAttempts: 8,
+              keyLocationMapMaximumPutAttempts: 32,
+              oldBlocks: 8,
+              currentBlocks: 24,
+              newBlocks: 3,
+              blocksOnBlockDevice: {
+                source: {
+                  file: {
+                    path: '/storage-ac/blocks',
+                    sizeBytes: 100 * 1024 * 1024,
+                  },
+                },
+                spareBlocks: 3,
+              },
+              persistent: {
+                stateDirectoryPath: '/storage-ac/persistent_state',
+                minimumEpochInterval: '300s',
+              },
+            },
           },
         },
       },
