--- a/charts/ndtech-buildbarn/templates/config/common-configmap.yaml
+++ b/charts/ndtech-buildbarn/templates/config/common-configmap.yaml
@@ -8,11 +8,11 @@ data:
             hashInitialization: 11946695773637837490,
             shards: [
               {
-                backend: { grpc: { address: 'storage-0.storage.buildbarn:8981' } },
+                backend: { grpc: { address: 'storage-0.storage.ndtech-staging:8981' } },
                 weight: 1,
               },
               {
-                backend: { grpc: { address: 'storage-1.storage.buildbarn:8981' } },
+                backend: { grpc: { address: 'storage-1.storage.ndtech-staging:8981' } },
                 weight: 1,
               },
             ],
@@ -24,11 +24,11 @@ data:
               hashInitialization: 14897363947481274433,
               shards: [
                 {
-                  backend: { grpc: { address: 'storage-0.storage.buildbarn:8981' } },
+                  backend: { grpc: { address: 'storage-0.storage.ndtech-staging:8981' } },
                   weight: 1,
                 },
                 {
-                  backend: { grpc: { address: 'storage-1.storage.buildbarn:8981' } },
+                  backend: { grpc: { address: 'storage-1.storage.ndtech-staging:8981' } },
                   weight: 1,
                 },
               ],
